# MyTunes

./: .gitignore  CHANGES.MD  LICENSE  README.MD  __build_win_pyInst.py  myTunes.spec  pyproject.toml  version.txt
myTunes/: __init__.py  config.py  config_env.py  main.py  pyinstaller.py  settings.ini  start.py
myTunes/gui/: app.py  drag'n'drop.py  drop.py
myTunes/gui/layout/: __init__.py  coverLayout.py  fileBrowser.py  filesLayout.py  iconButton.py  imageLabel.py  metadataLayout.py  popup.py  processWindow.py  saveWindow.py  settingsLayout.py  settingsWindow.py  tagsLayout.py  treeView.py
myTunes/model/: settings.py
myTunes/service/: afileState.py  converter.py  converterTask.py  encoder.py  ffmpeg.py  handler.py  qThreadTarget.py  qaac.py  tagEditor.py  util.py
myTunes/worker/: qThreadTarget.py
my_tunes/: config.py  settings.ini  start.py
my_tunes/service/: converter.py  encoder.py  ffmpeg.py  qaac.py  util.py
tests/: app.py  test_functionality.py  test_version.py
